update : login / register view
ui 생성완료

--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -1,3 +1,10 @@
 <resources>
     <string name="app_name">MiniDelivery_customer</string>
+
+    <!-- Menu Bar -->
+    <string name="home">Home</string>
+    <string name="liked">Liked</string>
+    <string name="my">My</string>
+
+
 </resources>
