--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -6,8 +6,9 @@
     <string name="favorite">Favorite</string>
     <string name="orderList">Order List</string>
     <string name="my">My</string>
-    <!-- TODO: Remove or change this placeholder text -->
-    <string name="hello_blank_fragment">Hello blank fragment</string>
 
 
+    <!-- Paid View -->
+    <string name="order_completed_1"><font color="#84A47C"><b><big>스타벅스</big></b></font>에서</string>
+    <string name="order_completed_2">주문이 완료되었어요!</string>
 </resources>
